demo/src/main/java/com/example/demo/principle/ocp/negative/FoldChar.java
package com.example.demo.principle.ocp.negative;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 10:32:16
 * @Description 新增加的折形图类
 */
public class FoldChar {

    public void display(){
        System.out.println("----------折形图展示---------");
    }
}
